[WAL-122] Added filter to phone country list based on available carrier billing country list

--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -55,6 +55,17 @@
 
         />
 
+    <include
+        android:id="@+id/phone_number_skeleton"
+        layout="@layout/skeleton_rounded_rectangle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/phone_number_layout"
+        app:layout_constraintEnd_toEndOf="@id/phone_number_layout"
+        app:layout_constraintStart_toStartOf="@id/phone_number_layout"
+        app:layout_constraintTop_toTopOf="@id/phone_number_layout"
+        />
+
     <LinearLayout
         android:id="@+id/phone_number_layout"
         android:layout_width="0dp"
@@ -64,6 +75,7 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/disclaimer"
