[WAL-161] Added new skeletons. Fixed issue where layout was changing after it loaded. Added cache to list endpoint

--- a/app/src/main/res/layout/fragment_subscription_details.xml
+++ b/app/src/main/res/layout/fragment_subscription_details.xml
@@ -33,6 +33,7 @@
           android:contentDescription="@string/empty"
           android:lineSpacingExtra="0.25sp"
           android:scaleType="centerInside"
+          android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
