--- a/app/src/main/res/layout/layout_expired_subscription_content.xml
+++ b/app/src/main/res/layout/layout_expired_subscription_content.xml
@@ -12,7 +12,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:lineSpacingExtra="0.25sp"
-      android:text="Last Bill:"
+      android:text="@string/subscriptions_details_last_bill"
       android:textColor="@color/black_87_alpha"
       app:layout_constraintEnd_toStartOf="@id/guideline_mid"
       app:layout_constraintHorizontal_bias="0"
@@ -42,7 +42,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
-      android:text="Start date:"
+      android:text="@string/subscriptions_details_start_date_title"
       app:layout_constraintEnd_toStartOf="@id/guideline_mid"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toStartOf="@+id/last_bill_title"
@@ -67,7 +67,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
-      android:text="Payment Method:"
+      android:text="@string/subscriptions_details_payment_method_title"
       app:layout_constraintEnd_toStartOf="@id/guideline_mid"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toStartOf="@+id/start_date_label"
