--- a/app/src/main/res/layout/subscription_item.xml
+++ b/app/src/main/res/layout/subscription_item.xml
@@ -11,8 +11,8 @@
 
   <ImageView
       android:id="@+id/app_icon"
-      android:layout_width="56dp"
-      android:layout_height="56dp"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
       android:layout_marginStart="@dimen/big_margin"
       android:layout_marginTop="@dimen/big_margin"
       app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +26,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
+      android:layout_marginEnd="8dp"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="@id/app_icon"
       app:layout_constraintEnd_toStartOf="@+id/more_button"
