--- a/app/src/main/res/layout/fragment_subscription_list.xml
+++ b/app/src/main/res/layout/fragment_subscription_list.xml
@@ -43,12 +43,11 @@
       tools:visibility="invisible"
       />
 
-  <ScrollView
+  <androidx.core.widget.NestedScrollView
       android:id="@+id/main_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
-      android:nestedScrollingEnabled="false"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +85,7 @@
             android:id="@+id/rvActiveSubs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/subscription_item"
@@ -120,6 +120,7 @@
             android:id="@+id/rvExpiredSubs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/subscription_item"
@@ -128,7 +129,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-  </ScrollView>
+  </androidx.core.widget.NestedScrollView>
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/layout_guideline"
