--- a/app/src/main/res/layout/layout_subscription_info.xml
+++ b/app/src/main/res/layout/layout_subscription_info.xml
@@ -18,7 +18,6 @@
       android:adjustViewBounds="true"
       android:contentDescription="@string/empty"
       android:lineSpacingExtra="0.25sp"
-      android:scaleType="centerInside"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -39,56 +38,52 @@
       app:lottie_scale="1"
       />
 
-  <LinearLayout
+  <TextView
+      android:id="@+id/app_name"
+      style="@style/TextAppearance.AppCompat.Headline.Roboto.Medium"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
+      android:layout_gravity="start"
       android:layout_marginStart="12dp"
-      android:orientation="vertical"
-      app:layout_constraintBottom_toBottomOf="@id/app_icon"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:textColor="@color/black_87_alpha"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/app_icon"
       app:layout_constraintTop_toTopOf="@id/app_icon"
-      >
+      tools:text="Cut the Rope 2gnasfigdsnsifdbngoisnoignsiudbgiubsfdiugbiusbgiusbfiugbisbgbsfdiugbisu"
+      />
 
-    <TextView
-        android:id="@+id/app_name"
-        style="@style/TextAppearance.AppCompat.Headline.Roboto.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:textColor="@color/black_87_alpha"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/app_icon"
-        app:layout_constraintTop_toTopOf="@id/app_icon"
-        tools:text="Cut the Rope 2"
-        />
+  <TextView
+      android:id="@+id/total_value"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_gravity="start"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:textColor="@color/black_87_alpha"
+      android:textSize="16sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@id/app_name"
+      app:layout_constraintTop_toBottomOf="@id/app_name"
+      tools:text="$2.40 /month"
+      />
 
-    <TextView
-        android:id="@+id/total_value"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:textColor="@color/black_87_alpha"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@id/app_icon"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
-        tools:text="$2.40 /month"
-        />
-
-    <TextView
-        android:id="@+id/total_value_appc"
-        style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:fontFamily="sans-serif"
-        android:textColor="#828282"
-        android:textSize="11sp"
-        app:layout_constraintStart_toEndOf="@id/app_icon"
-        app:layout_constraintTop_toBottomOf="@id/total_value"
-        tools:text="~69.90 APPC"
-        />
-
-  </LinearLayout>
+  <TextView
+      android:id="@+id/total_value_appc"
+      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_gravity="start"
+      android:fontFamily="sans-serif"
+      android:textColor="@color/dialog_secondary_price"
+      android:textSize="11sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@id/app_name"
+      app:layout_constraintTop_toBottomOf="@id/total_value"
+      tools:text="~69.90 APPC"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
