WAL-74 - Minor refactors

--- a/app/src/main/res/layout-land/error_verification_layout.xml
+++ b/app/src/main/res/layout-land/error_verification_layout.xml
@@ -21,17 +21,11 @@
 
   <TextView
       android:id="@+id/error_title"
+      style="@style/VerifyWallet.Error.Title1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="23dp"
-      android:fontFamily="sans-serif"
-      android:letterSpacing="0.03"
-      android:lineSpacingExtra="4sp"
       android:text="@string/error_general"
-      android:textAlignment="center"
-      android:textColor="@color/btn_light_enabled_color"
-      android:textSize="20sp"
-      android:textStyle="bold"
       android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -41,18 +35,13 @@
 
   <TextView
       android:id="@+id/error_title_2"
+      style="@style/VerifyWallet.Error.Title2"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="135dp"
       android:layout_marginTop="23dp"
       android:layout_marginEnd="135dp"
-      android:fontFamily="sans-serif-medium"
-      android:letterSpacing="0.03"
-      android:lineSpacingExtra="4sp"
       android:text="@string/card_verification_no_attempts_title"
-      android:textAlignment="center"
-      android:textColor="@color/black"
-      android:textSize="16sp"
       android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +50,7 @@
 
   <TextView
       android:id="@+id/error_message"
-      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      style="@style/VerifyWallet.Error.Message"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
@@ -69,9 +58,7 @@
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="8dp"
       android:text="@string/unknown_error"
-      android:textAlignment="center"
       android:textColor="@color/pending_payment_text_color"
-      android:textSize="16sp"
       app:layout_constraintBottom_toTopOf="@+id/contact_us"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -81,16 +68,14 @@
 
   <TextView
       android:id="@+id/error_message_2"
-      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      style="@style/VerifyWallet.Error.Message"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginTop="@dimen/big_margin"
       android:layout_marginEnd="16dp"
       android:text="@string/card_verification_no_attempts_body"
-      android:textAlignment="center"
       android:textColor="@color/verify_wallet_subtitle"
-      android:textSize="16sp"
       android:visibility="gone"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
