--- a/app/src/main/res/layout-land/error_verification_layout.xml
+++ b/app/src/main/res/layout-land/error_verification_layout.xml
@@ -151,8 +151,9 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="23dp"
+      android:layout_marginBottom="23dp"
       android:text="@string/try_again"
-      app:layout_constraintBottom_toTopOf="@+id/maybe_later"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/end_guideline"
       app:layout_constraintTop_toTopOf="@+id/layout_support_logo"
@@ -163,17 +164,16 @@
       style="@style/MaterialButtonStyle.Light"
       android:layout_width="0dp"
       android:layout_height="@dimen/button_height"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="12dp"
-      android:layout_marginEnd="23dp"
-      android:layout_marginBottom="23dp"
+      android:layout_marginStart="23dp"
+      android:layout_marginEnd="8dp"
       android:text="@string/backup_tooltip_later_button"
       android:visibility="gone"
-      app:layout_constraintBottom_toBottomOf="@+id/layout_support_logo"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@id/end_guideline"
-      app:layout_constraintTop_toBottomOf="@+id/try_again"
+      app:layout_constraintBottom_toBottomOf="@id/try_again"
+      app:layout_constraintEnd_toEndOf="@id/start_guideline"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/try_again"
       app:layout_constraintVertical_bias="1"
+      tools:visibility="visible"
       />
 
   <androidx.constraintlayout.widget.Guideline
