--- a/app/src/main/res/layout/fragment_verification_code.xml
+++ b/app/src/main/res/layout/fragment_verification_code.xml
@@ -7,11 +7,25 @@
     android:theme="@style/MaterialAppTheme"
     >
 
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      android:visibility="visible"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
   <ScrollView
       android:id="@+id/content_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
+      android:visibility="invisible"
+      tools:visibility="visible"
       >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -153,20 +167,6 @@
           app:layout_constraintTop_toBottomOf="@id/change_card_button"
           app:layout_constraintVertical_bias="0"
           />
-
-      <ProgressBar
-          android:id="@+id/progress_bar"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:indeterminateDrawable="@drawable/gradient_progress"
-          android:visibility="gone"
-          app:layout_constraintBottom_toTopOf="@+id/maybe_later"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/layout_example"
-          tools:visibility="visible"
-          />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
   </ScrollView>
