--- a/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout-land/fragment_carrier_verify_phone.xml
@@ -150,12 +150,11 @@
         android:layout_height="@dimen/button_height"
         android:layout_gravity="end"
         android:layout_marginTop="5dp"
-        android:text="CHANGE"
+        android:text="@string/change_button"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/phone_number_layout"
         app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
         />
-    <!-- TODO this text is hardcoded, change to strings.xml -->
 
     <TextView
         android:id="@+id/field_error_text"
