--- a/app/src/main/res/layout/fragment_carrier_verify_phone.xml
+++ b/app/src/main/res/layout/fragment_carrier_verify_phone.xml
@@ -155,12 +155,11 @@
       android:layout_width="wrap_content"
       android:layout_height="@dimen/button_height"
       android:layout_gravity="end"
-      android:text="CHANGE"
+      android:text="@string/change_button"
       android:visibility="gone"
       app:layout_constraintEnd_toEndOf="@+id/phone_number_layout"
       app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
       />
-  <!-- TODO this text is hardcoded, change to strings.xml -->
 
   <TextView
       android:id="@+id/field_error_text"
