--- a/app/src/main/res/layout/fragment_subscription_list.xml
+++ b/app/src/main/res/layout/fragment_subscription_list.xml
@@ -67,9 +67,11 @@
           android:layout_marginTop="24dp"
           android:layout_marginEnd="@dimen/big_margin"
           android:text="@string/subscriptions_active_title"
+          android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          tools:visibility="visible"
           />
 
       <androidx.cardview.widget.CardView
@@ -101,9 +103,11 @@
           android:layout_marginTop="16dp"
           android:layout_marginEnd="@dimen/big_margin"
           android:text="@string/subscriptions_expired_title"
+          android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/cvActive"
+          tools:visibility="visible"
           />
 
       <androidx.cardview.widget.CardView
