--- a/app/src/main/res/layout/layout_subscription_info.xml
+++ b/app/src/main/res/layout/layout_subscription_info.xml
@@ -18,6 +18,7 @@
       android:adjustViewBounds="true"
       android:contentDescription="@string/empty"
       android:lineSpacingExtra="0.25sp"
+      android:transitionName="app_icon_transition"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
