--- a/app/src/main/res/layout/activity_wallet_verification.xml
+++ b/app/src/main/res/layout/activity_wallet_verification.xml
@@ -17,6 +17,17 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
+  <ProgressBar
+      android:id="@+id/progress_bar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateDrawable="@drawable/gradient_progress"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/app_bar"
+      />
+
   <FrameLayout
       android:id="@+id/fragment_container"
       android:layout_width="match_parent"
